Upgrade to Gradle 25